Enable bookshelf example: replace cargo with embedded Jetty 12